--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "validate:words": "node src/utils/validateWords.js"
   },
   "dependencies": {
     "ws": "^8.14.2",
