--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "mongodb": "^6.20.0",
+    "node-telegram-bot-api": "^0.66.0",
     "ws": "^8.14.2"
   },
   "keywords": [
