Правки связанные с БД

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-﻿MONGODB_URI=mongodb://admin:MyStrongPass2025!@localhost:27017/?authSource=admin
-MONGODB_DATABASE=hat_game
+﻿MONGODB_URI=mongodb://localhost:27017,localhost:27018,localhost:27019/hat-game?replicaSet=rs0
+MONGODB_DATABASE=hat-game
 
 USE_MONGODB=true
 STATS_STORAGE_TYPE=mongodb
